package Assignment.View;

public class DisplayError
{
	public static void showError(String errorMessage)
	{
		System.out.println(errorMessage);
	}
}
