@startuml

title __OOSEASSIGNMENT2's Class Diagram__\n

  package Assignment {
    package Assignment.Controller {
      class AddController {
      }
    }
  }
  

  package Assignment {
    package Assignment.Model {
      class Candidate {
      }
    }
  }
  

  package Assignment {
    package Assignment.View {
      class DisplayDetails {
      }
    }
  }
  

  package Assignment {
    package Assignment.View {
      class DisplayError {
      }
    }
  }
  

  package edu.curtin.messaging {
    class FacebookChild {
    }
  }
  

  package edu.curtin.messaging {
    abstract class FacebookMessenger {
    }
  }
  

  package Assignment {
    package Assignment.Controller {
      class FactoryClass {
      }
    }
  }
  

  package Assignment {
    package Assignment.Controller {
      interface IOInterface {
      }
    }
  }
  

  package Assignment {
    package Assignment.Controller {
      class KeywordAdded {
      }
    }
  }
  

  package Assignment {
    package Assignment.Controller {
      class KeywordTrending {
      }
    }
  }
  

  package Assignment {
    package Assignment.View {
      class Load {
      }
    }
  }
  

  package Assignment {
    class Main {
    }
  }
  

  package Assignment {
    package Assignment.View {
      class MenuClass {
      }
    }
  }
  

  package Assignment {
    package Assignment.Controller {
      interface MenuOptionInterface {
      }
    }
  }
  

  package Assignment {
    package Assignment.Controller {
      class NotificationController {
      }
    }
  }
  

  package Assignment {
    package Assignment.Controller {
      interface ObserverKeywordsAdded {
      }
    }
  }
  

  package Assignment {
    package Assignment.Controller {
      interface ObserverKeywordsTrending {
      }
    }
  }
  

  package Assignment {
    package Assignment.Controller {
      interface ObserverTalkingPointAdded {
      }
    }
  }
  

  package Assignment {
    package Assignment.Model {
      abstract class Person {
      }
    }
  }
  

  package Assignment {
    package Assignment.Model {
      class PersonIDException {
      }
    }
  }
  

  package Assignment {
    package Assignment.Model {
      class PolicyArea {
      }
    }
  }
  

  package Assignment {
    package Assignment.Model {
      class PolicyExistsException {
      }
    }
  }
  

  package Assignment {
    package Assignment.Controller {
      class RemoveController {
      }
    }
  }
  

  package edu.curtin.messaging {
    class SMS {
    }
  }
  

  package Assignment {
    package Assignment.View {
      class Save {
      }
    }
  }
  

  package Assignment {
    package Assignment.Model {
      class Strategist {
      }
    }
  }
  

  package Assignment {
    package Assignment.Controller {
      class TalkingPointAdded {
      }
    }
  }
  

  package edu.curtin.messaging {
    class TwitterChild {
    }
  }
  

  package edu.curtin.messaging {
    abstract class TwitterMessenger {
    }
  }
  

  package Assignment {
    package Assignment.Controller {
      class UIController {
      }
    }
  }
  

  package Assignment {
    package Assignment.View {
      class ViewData {
      }
    }
  }
  

  package Assignment {
    package Assignment.Model {
      class Volunteer {
      }
    }
  }
  

  AddController -up-|> MenuOptionInterface
  AddController o-- MenuClass : menuObj
  AddController o-- FactoryClass : factoryObj
  Candidate -up-|> Person
  FacebookChild -up-|> FacebookMessenger
  FacebookChild o-- PolicyArea : policyArea
  KeywordAdded -up-|> ObserverKeywordsAdded
  KeywordAdded o-- Person : person
  KeywordTrending -up-|> ObserverKeywordsAdded
  KeywordTrending -up-|> ObserverKeywordsTrending
  KeywordTrending o-- Person : person
  Load -up-|> IOInterface
  NotificationController o-- MenuClass : menuObj
  RemoveController -up-|> MenuOptionInterface
  RemoveController o-- MenuClass : menuObj
  Save -up-|> IOInterface
  Strategist -up-|> Person
  TalkingPointAdded -up-|> ObserverTalkingPointAdded
  TalkingPointAdded o-- Person : person
  TwitterChild -up-|> TwitterMessenger
  TwitterChild o-- PolicyArea : policyArea
  UIController o-- MenuClass : menuObject
  UIController o-- AddController : addOption
  UIController o-- RemoveController : removeOption
  UIController o-- ViewData : viewOption
  UIController o-- NotificationController : notification
  ViewData -up-|> MenuOptionInterface
  Volunteer -up-|> Person


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
